fixed alignment of gif in small screen

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
 #smartphone img {
     max-height: 600px;
     object-fit: scale-down;
-    margin-left: 75px
+    margin-left: 80px
 }
 
 .fa-user-check, .fa-hands-helping, .fa-rocket {
